Revert "fix: force table cell content to wrap to prevent overly wide modal (DHIS2-5920) (#2961)"
This reverts commit 87fe4cc451894cb464e1322f8a1f3f867b9df8b7.

--- a/src/components/map/styles/Popup.css
+++ b/src/components/map/styles/Popup.css
@@ -7,6 +7,10 @@
     min-width: 150px;
 }
 
-.maplibregl-popup-close-button:focus {
-    outline: none;
+.dhis2-map-popup-event {
+    overflow-x: auto;
+}
+
+.dhis2-map-popup-event th {
+    text-align: left;
 }
